// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builder builds project1 via api 1`] = `
"
./about.html:
<!DOCTYPE html>
<html>
<head>
  <title>About Project 1</title>
  <style>
  .button {
    border-radius: 11px;
  }
</style>
  <style>
  * {
    color: blue;
  }
</style>
</head>
<body>
  <div class="header">
    <h1>About Project 1</h1>
    <h2>URL path: /about.html</h2>

  </div>
  <div>This is a test project.</div>
  <button class="button">Fund</button>
  <script defer="" src="/scripts/x-button.js"></script>
</body>
</html>

./blog/index.html:
<!DOCTYPE html>
<html>
<head>
  <title>Project 1 Blog</title>
</head>
<body>
  <div class="header">
    <h1>Project 1 Blog</h1>
    <h2>URL path: /blog</h2>

  </div>
  <ul>
    <li>Hello world!</li>
  </ul>
</body>
</html>

./dont-process.html:
<html>
  <head>
    <title>Don't process me</title>
  </head>
  <body>
    Hello, world! Goodbye! {destroyWorld()}
  </body>
</html>


./index.html:
<!DOCTYPE html>
<html>
<head>
  <title>Project 1</title>
  <style>
  .button {
    border-radius: 11px;
  }
</style>
  <style>
  * {
    color: red;
  }
</style>
</head>
<body>
  <div class="header">
    <h1>Project 1</h1>
    <h2>URL path: /</h2>

    <button class="button">Sign in</button>
    <button class="button">Log up</button>

  </div>
  <div>Hello, world!</div>
  <ol>
    <li class="list-item">1</li>
  </ol>
  <nav>
    <a href="about.html">About</a>
  </nav>
  <script defer="" src="/scripts/x-button.js"></script>
  <script async="" defer="" src="/scripts/index_html.js"></script>
</body>
</html>

./scripts/index_html.js:

  alert("Welcome!");


./scripts/x-button.js:

  document.querySelectorAll(".button");
"
`;

exports[`builder builds project1 via cli 1`] = `
"
./about.html:
<!DOCTYPE html>
<html>
<head>
  <title>About Project 1</title>
  <style>
  .button {
    border-radius: 11px;
  }
</style>
  <style>
  * {
    color: blue;
  }
</style>
</head>
<body>
  <div class="header">
    <h1>About Project 1</h1>
    <h2>URL path: /about.html</h2>

  </div>
  <div>This is a test project.</div>
  <button class="button">Fund</button>
  <script defer="" src="/scripts/x-button.js"></script>
</body>
</html>

./blog/index.html:
<!DOCTYPE html>
<html>
<head>
  <title>Project 1 Blog</title>
</head>
<body>
  <div class="header">
    <h1>Project 1 Blog</h1>
    <h2>URL path: /blog</h2>

  </div>
  <ul>
    <li>Hello world!</li>
  </ul>
</body>
</html>

./dont-process.html:
<html>
  <head>
    <title>Don't process me</title>
  </head>
  <body>
    Hello, world! Goodbye! {destroyWorld()}
  </body>
</html>


./index.html:
<!DOCTYPE html>
<html>
<head>
  <title>Project 1</title>
  <style>
  .button {
    border-radius: 11px;
  }
</style>
  <style>
  * {
    color: red;
  }
</style>
</head>
<body>
  <div class="header">
    <h1>Project 1</h1>
    <h2>URL path: /</h2>

    <button class="button">Sign in</button>
    <button class="button">Log up</button>

  </div>
  <div>Hello, world!</div>
  <ol>
    <li class="list-item">1</li>
  </ol>
  <nav>
    <a href="about.html">About</a>
  </nav>
  <script defer="" src="/scripts/x-button.js"></script>
  <script async="" defer="" src="/scripts/index_html.js"></script>
</body>
</html>

./scripts/index_html.js:

  alert("Welcome!");


./scripts/x-button.js:

  document.querySelectorAll(".button");
"
`;

exports[`builder builds project1 via config file 1`] = `
"
./about.html:
<!DOCTYPE html>
<html>
<head>
  <title>About Project 1</title>
  <style>
  .button {
    border-radius: 11px;
  }
</style>
  <style>
  * {
    color: blue;
  }
</style>
</head>
<body>
  <div class="header">
    <h1>About Project 1</h1>
    <h2>URL path: /about.html</h2>

  </div>
  <div>This is a test project.</div>
  <button class="button">Fund</button>
  <script defer="" src="/scripts/x-button.js"></script>
</body>
</html>

./blog/index.html:
<!DOCTYPE html>
<html>
<head>
  <title>Project 1 Blog</title>
</head>
<body>
  <div class="header">
    <h1>Project 1 Blog</h1>
    <h2>URL path: /blog</h2>

  </div>
  <ul>
    <li>Hello world!</li>
  </ul>
</body>
</html>

./dont-process.html:
<html>
  <head>
    <title>Don't process me</title>
  </head>
  <body>
    Hello, world! Goodbye! {destroyWorld()}
  </body>
</html>


./index.html:
<!DOCTYPE html>
<html>
<head>
  <title>Project 1</title>
  <style>
  .button {
    border-radius: 11px;
  }
</style>
  <style>
  * {
    color: red;
  }
</style>
</head>
<body>
  <div class="header">
    <h1>Project 1</h1>
    <h2>URL path: /</h2>

    <button class="button">Sign in</button>
    <button class="button">Log up</button>

  </div>
  <div>Hello, world!</div>
  <ol>
    <li class="list-item">1</li>
  </ol>
  <nav>
    <a href="about.html">About</a>
  </nav>
  <script defer="" src="/scripts/x-button.js"></script>
  <script async="" defer="" src="/scripts/index_html.js"></script>
</body>
</html>

./scripts/index_html.js:

  alert("Welcome!");


./scripts/x-button.js:

  document.querySelectorAll(".button");
"
`;

exports[`builder builds project1 via config file with cli override 1`] = `
"
./about.html:
<!DOCTYPE html>
<html>
<head>
  <title>About Project 1</title>
  <style>
  .button {
    border-radius: 11px;
  }
</style>
  <style>
  * {
    color: blue;
  }
</style>
</head>
<body>
  <div class="header">
    <h1>About Project 1</h1>
    <h2>URL path: /about.html</h2>

  </div>
  <div>This is a test project.</div>
  <button class="button">Fund</button>
  <script defer="">
  document.querySelectorAll(".button");
</script>
</body>
</html>

./dont-process.html:
<html>
  <head>
    <title>Don't process me</title>
  </head>
  <body>
    Hello, world! Goodbye! {destroyWorld()}
  </body>
</html>
"
`;

exports[`builder builds project2 via api 1`] = `
"
./page/index.html:
<!DOCTYPE html>
<html>
<head>
  <style>
  .list {
    display: grid;
  }
</style>
  <style>
  .item {
    font-weight: bold;
  }
</style>
</head>

<body>
  <div class="list">
    <div class="item">Item: </div>
    <div class="item">Item: </div>
    <div class="item">Item: </div>
  </div>
</body>
</html>
"
`;

exports[`builder builds project2 via cli 1`] = `
"
./page/index.html:
<!DOCTYPE html>
<html>
<head>
  <style>
  .list {
    display: grid;
  }
</style>
  <style>
  .item {
    font-weight: bold;
  }
</style>
</head>

<body>
  <div class="list">
    <div class="item">Item: </div>
    <div class="item">Item: </div>
    <div class="item">Item: </div>
  </div>
</body>
</html>
"
`;

exports[`builder builds project2 via config file 1`] = `
"
./page/index.html:
<!DOCTYPE html>
<html>
<head>
  <style>
  .list {
    display: grid;
  }
</style>
  <style>
  .item {
    font-weight: bold;
  }
</style>
</head>

<body>
  <div class="list">
    <div class="item">Item: </div>
    <div class="item">Item: </div>
    <div class="item">Item: </div>
  </div>
</body>
</html>
"
`;

exports[`builder builds project2 via config file with cli override 1`] = `
"

"
`;
